--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,9 +1,14 @@
-appname = openvpn-web-ui
+appname = pivpn-tap-web-ui
 httpport = 8080
-runmode = dev
+runmode = prod
 EnableGzip = true
-EnableAdmin = true
+EnableAdmin = false
 sessionon = true
 CopyRequestBody = true
 
-DbPath = "./data.db"
+HTTPSCertFile=
+HTTPSKeyFile=
+HTTPSPort=8443
+EnableHTTPS=false
+
+DbPath = "/opt/openvpn-gui-tap/db/data.db"
