--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,14 +1,14 @@
-appname = pivpn-tap-web-ui
-httpport = 8080
-runmode = prod
-EnableGzip = true
-EnableAdmin = false
-sessionon = true
-CopyRequestBody = true
+appname=pivpn-tap-web-ui
+httpport=8080
+runmode=prod
+EnableGzip=true
+EnableAdmin=false
+sessionon=true
+CopyRequestBody=true
 
+EnableHTTPS=false
+HTTPSPort=8443
 HTTPSCertFile=
 HTTPSKeyFile=
-HTTPSPort=8443
-EnableHTTPS=false
 
-DbPath = "/opt/openvpn-gui-tap/db/data.db"
+DbPath="/opt/openvpn-gui-tap/db/data.db"
